<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".PlayerActivity"

    android:orientation="vertical"
    android:gravity="center">

<!-- First Row  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

<!--  Back Button -->
        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            app:tint="@color/white"
            android:contentDescription="@string/back_btn"
            android:padding="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/music_is_my_world"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <!--        Favourite Button-->
        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_empty_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn"/>
    </LinearLayout>


    <!-- Current Song Image   -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:src="@mipmap/music_player_icon"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="0dp"/>


    <!-- Current Song Name   -->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/start_tv"
            android:gravity="center"/>

        <!-- Seek Bar(Music flow)  -->

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/end_tv"
            android:gravity="center"/>

    </LinearLayout>


    <!-- Button Next,Previous,Stop,Play Song  -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Previous Button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp" />

        <!-- Play and Pause Button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/pause_icon"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved" />

        <!-- Next Button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            app:tint="@color/white"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>


        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/white"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>


        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            app:tint="@color/white"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>