<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--   for horizontal 3 button   -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shuffleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/favouriteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourites_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/favorite_icon"
                    android:text="@string/favourites_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>


                <Button
                    android:id="@+id/playlistBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist_icon"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <TextView
                android:id="@+id/totalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"/>
            />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.example.playitnew4.NowPlaying"
            tools:layout="@layout/fragment_now_playing"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        app:itemTextColor="@color/white"
        android:background="#716A69"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>